# TrafficSimCPP

./: CMakeLists.txt  DETAILED_GUIDE.md  LICENSE  README.md
src/: Car.h  Intersection.h  LandVehicle.h  RandomGen.cpp  RandomGen.h  TrafficObject.h  TrafficSim.cpp  TrafficSim.h  Truck.h  Vehicle.h  main.cpp
